<resources>
    <string name="app_name">Bank-mobile</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters_as_opposed_to_using_content_here_content_here_making_it_look_like_readable_english_many_desktop_publishing_packages_and_web_page_editors_now_use_lorem_ipsum_as_their_default_model_text_and_a_search_for_lorem_ipsum_will_uncover_many_web_sites_still_in_their_infancy_various_versions_have_evolved_over_the_years_sometimes_by_accident_sometimes_on_purpose_injected_humour_and_the_like">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="a_simple_way_to_get_a_microloan">A simple way to get a microloan</string>
    <string name="the_best_way_to_get_a_microloan_just_by_using_your_phone">The best way to get a microloan just by using your phone</string>
    <string name="start">Start</string>
    <string name="verification">Verification</string>
    <string name="show_map">Show map</string>
    <string name="list_of_places">List of places</string>
    <string name="loan_online">Loan online</string>
    <string name="my_profile">My Profile</string>
    <string name="spiner">spiner</string>
    <string name="spiner1">spiner1</string>
</resources>